--- a/Pms/Modules/Security/tmpl/addUser.tmpl
+++ b/Pms/Modules/Security/tmpl/addUser.tmpl
@@ -1,4 +1,4 @@
-<table class="table">
+<table class="table table-condensed">
   <thead>
     <tr>
       <th>#</th>
@@ -10,7 +10,7 @@
   </thead>
   <tbody>
   <TMPL_LOOP NAME="USERS">
-    <tr>
+    <tr id="user_<TMPL_VAR NAME="USER_ID">">
         <td><TMPL_VAR NAME="USER_ID"></td>
         <td><TMPL_VAR NAME="USER_NAME"></td>
         <td><TMPL_VAR NAME="USER_FORENAME"></td>
@@ -19,11 +19,13 @@
           <div class="btn-group">
             <a class="btn btn-primary dropdown-toggle" data-toggle="dropdown" href="#"><i class="icon-user icon-white"></i>Bearbeiten</a>
             <ul class="dropdown-menu">
-              <li><a href="#"><i class="icon-pencil"></i> Edit</a></li>
+              <li><a data-toggle="modal" href="#userEditModal"><i class="icon-pencil"></i> Edit</a></li>
               <li><a href="#"><i class="icon-trash"></i> Delete</a></li>
+              <!--
               <li><a href="#"><i class="icon-ban-circle"></i> Ban</a></li>
               <li class="divider"></li>
               <li><a href="#"><i class="i"></i> Make admin</a></li>
+              -->
             </ul>
           </div>
         </td>
@@ -31,3 +33,46 @@
   </TMPL_LOOP>
   </tbody>
 </table>
+
+<div class="modal hide fade" id="userEditModal">
+  <div class="modal-header">
+    <a class="close" data-dismiss="modal">x</a>
+    <h3>Edit User</h3>
+  </div>
+  <div class="modal-body">
+  <form class="form-horizontal">
+        <fieldset>
+          <legend>Userinfo</legend>
+          <div class="control-group">
+            <label class="control-label" for="inputNickname">Nickname</label>
+            <div class="controls">
+              <input type="text" class="input-xlarge" id="inputNickname">
+            </div>
+          </div>
+          <div class="control-group">
+            <label class="control-label" for="inputFirstname">First Name</label>
+            <div class="controls">
+              <input type="text" class="input-xlarge" id="inputFirstname">
+            </div>
+          </div>
+          <div class="control-group">
+            <label class="control-label" for="inputLastname">Last Name</label>
+            <div class="controls">
+              <input type="text" class="input-xlarge" id="inputLastname">
+            </div>
+          </div>
+          <div class="control-group">
+            <label class="control-label" for="inputPassword">Password</label>
+            <div class="controls">
+              <input type="text" class="input-xlarge" id="inputPassword">
+            </div>
+          </div>
+        </fieldset>
+      </form>
+  </div>
+  <div class="modal-footer">
+    <a href="#" class="btn">Close</a>
+    <a href="#" class="btn btn-primary">Save changes</a>
+  </div>
+</div>
+
