--- a/tmpl/base.tmpl
+++ b/tmpl/base.tmpl
@@ -1,13 +1,15 @@
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <meta charset="utf-8" />
+    <meta charset="utf-8">
+    <title>PMS - Perl Messaging System</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-  <title>PMS - Perl Messaging System</title>
-  <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css" />
-  <link href="css/bootstrap-responsive.min.css" rel="stylesheet" type=
-  "text/css" />
-  
-  <style type="text/css">
+    <!-- Le styles -->
+    <link href="css/bootstrap.css" rel="stylesheet">
+    <style type="text/css">
       body {
         padding-top: 60px;
         padding-bottom: 40px;
@@ -15,8 +17,14 @@
       .sidebar-nav {
         padding: 9px 0;
       }
-  </style>
-  
+    </style>
+    <link href="css/bootstrap-responsive.css" rel="stylesheet">
+    
+    <!-- HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!--[if lt IE 9]>
+      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
+    <![endif]-->
+    
 </head>
   <body>
     <TMPL_VAR NAME="CONTENT">
@@ -24,5 +32,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <TMPL_LOOP NAME="MODULE_SCRIPTS">
+      <script src="<TMPL_VAR NAME=LOCATION>"></script>
+    </TMPL_LOOP>
   </body>
 </html>
