--- a/tmpl/login.tmpl
+++ b/tmpl/login.tmpl
@@ -14,7 +14,7 @@
 </div>
 
 <div class="container" color="black">
-  <div class="row">
+  <section>
     <div class="span4 offset4">
       <TMPL_IF NAME="HAS_ERROR">
         <span class="label label-important"><TMPL_VAR NAME="ERROR"></span>
