--- a/Pms/Modules/Security/tmpl/addUser.tmpl
+++ b/Pms/Modules/Security/tmpl/addUser.tmpl
@@ -5,7 +5,7 @@
       <th>First Name</th>
       <th>Last Name</th>
       <th>Username</th>
-      <th></h>
+      <th><a class="btn btn-primary" href="#"><i class="icon-user icon-white"></i>Hinzuf&uuml;gen</a></th>
     </tr>
   </thead>
   <tbody>
@@ -40,9 +40,8 @@
     <h3>Edit User</h3>
   </div>
   <div class="modal-body">
-  <form class="form-horizontal">
+  <form class="form-horizontal well">
         <fieldset>
-          <legend>Userinfo</legend>
           <div class="control-group">
             <label class="control-label" for="inputNickname">Nickname</label>
             <div class="controls">
