--- a/tmpl/base.tmpl
+++ b/tmpl/base.tmpl
@@ -32,6 +32,8 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="js/jquery.js"></script>
     <script src="js/bootstrap.min.js"></script>
+    <script src="js/jquery-blockUI.js"></script>
+    <script src="js/helper.js"></script>
     <TMPL_LOOP NAME="MODULE_SCRIPTS">
       <script src="<TMPL_VAR NAME=LOCATION>"></script>
     </TMPL_LOOP>
