Add Page to manage pms-admins

--- a/tmpl/addUser.tmpl
+++ b/tmpl/addUser.tmpl
@@ -1,4 +1,4 @@
-<h3>PMS Chatuser Verwaltung</h3><br/>
+<h3>PMS-Administratoren Verwaltung</h3><br/>
 <table class="table table-condensed">
   <thead>
     <tr>
