--- a/tmpl/index.tmpl
+++ b/tmpl/index.tmpl
@@ -30,6 +30,12 @@
       </div>
       <div class="well sidebar-nav">
         <ul class="nav nav-list">
+            <li class="nav-header">Verwaltung</li>
+            <li>
+                <a href="users.pl">Admins verwalten</a>
+            </li>
+          </ul>
+        <ul class="nav nav-list">
           <li class="nav-header">Module</li>
           <TMPL_LOOP NAME="MODULE_NAVS">
             <li>
